@@ -51,6 +51,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Define __bool__ rather than __nonzero__ method in Python 3.
   * sort(cmp=) and sorted(cmp=) no longer work in Python 3.  Use appropriate
     key= arguments instead.
+  * Fix ResourceWarning while reading /proc/mounts.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
